--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -39,6 +39,7 @@
     <Button  android:id="@+id/detailItem"    
         android:layout_width="wrap_content"  
         android:layout_height="wrap_content"    
-       android:layout_margin="5px"/>  
+       android:layout_margin="5px"
+       android:text="商品详情"/>  
     </LinearLayout>  
  </LinearLayout>  
